public interface Peripherique {
    /**
     * permet de changer l'etat interne d'un périphérique en l'allumant
     */
    public void allumer();

    /**
     * permet de changer l'etat interne d'une lampe en l'eteignant
     */
    public void eteindre();
}