@startuml

'''class
class Telecommande {
  + Telecommande()
  + allumerPeripherique() : boolean
  + eteindrePeripherique() : boolean
  + activerPeripherique() : boolean
  + activerTout() : boolean
  + toString() : String
}
class Lampe {
  - nom : String
  - allumee : boolean
  + Lampe(String s)
  + allumer() : boolean
  + eteindre() : boolean
  + toString() : String
  + isAllume() : boolean
}

class Hifi {
  - son : int
  + allumer() : boolean
  + eteindre() : boolean
  + toString() : String
}

class Television {
  - son : int
  + allumer() : boolean
  + eteindre() : boolean
  + toString() : String
}
interface Peripherique {
  + allumer() : boolean
  + eteindre() : boolean
  + toString() : String
}

''' relation
Telecommande "1" --> "*" Peripherique
Peripherique <|.. Lampe
Peripherique <|.. Hifi
Peripherique <|.. Television
@enduml